[gd_scene load_steps=3 format=3 uid="uid://dgqyqg33k018f"]

[ext_resource type="Script" path="res://scripts/pause.gd" id="1_i5786"]
[ext_resource type="FontFile" uid="uid://wirx6ymm07ce" path="res://assets/fonts/Blomberg-8MKKZ.otf" id="2_23i1n"]

[node name="Pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("1_i5786")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.0705882, 0.0705882, 0.0705882, 0.67451)

[node name="restart" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = 92.0
offset_right = 110.0
offset_bottom = 161.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_23i1n")
theme_override_font_sizes/font_size = 65
text = "Restart
"

[node name="Exit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.0
offset_top = 428.0
offset_right = 151.0
offset_bottom = 497.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_23i1n")
theme_override_font_sizes/font_size = 65
text = "Exit game
"

[node name="Continue" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -108.0
offset_right = 122.0
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_23i1n")
theme_override_font_sizes/font_size = 65
text = "Continue"

[node name="quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = 312.0
offset_right = 188.0
offset_bottom = 381.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_23i1n")
theme_override_font_sizes/font_size = 65
text = "Quit to menu"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -217.0
offset_top = 172.0
offset_right = 218.0
offset_bottom = 312.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_23i1n")
theme_override_font_sizes/font_size = 150
text = "Paused
"

[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
